--- a/EasyImgurPhone/res/values/strings.xml
+++ b/EasyImgurPhone/res/values/strings.xml
@@ -10,6 +10,7 @@
         <item >Galleries</item>
         <item >Albums</item>
         <item >My Photos</item>
+        <item >Login</item>
     </string-array>
     
     <!-- Sections filter in Galleries -->
@@ -18,5 +19,8 @@
         <item >Top</item>
         <item >User</item>
     </string-array>
+    
+    <!-- Progress -->
+    <string name="loading">Loading</string>
 
 </resources>
