--- a/EasyImgurPhone/res/values/strings.xml
+++ b/EasyImgurPhone/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="text_copy_link">Copy link</string>
     <string name="text_copy_direct">Copy direct</string>
     <string name="loading">Loading</string>
+    
+    <string name="tip_detail_gallery">Tap here to explore this album</string>
 
 </resources>
