--- a/EasyImgurPhone/res/values/strings.xml
+++ b/EasyImgurPhone/res/values/strings.xml
@@ -11,6 +11,7 @@
         <item>Memes</item>
         <item>Albums</item>
         <item>My Photos</item>
+        <item>Upload Image</item>
         <item>Login</item>
     </string-array>
 
